using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace SEG
{
    public class DigitoVerificadorVertical_62_BP
    {
        public string Tabla_62_BP { get; set; }

        public string DVV_62_BP { get; set; }
    }
}
